[workspace]
members = [
    "objdiff-cli",
    "objdiff-core",
    "objdiff-gui",
]
resolver = "2"

[profile.release-lto]
inherits = "release"
lto = "fat"
strip = "debuginfo"
codegen-units = 1

[workspace.package]
version = "2.1.0"
authors = ["Luke Street <luke@street.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/encounter/objdiff"
rust-version = "1.74"
