[workspace]
members = [
    "objdiff-cli",
    "objdiff-core",
    "objdiff-gui",
    "objdiff-wasm",
]
resolver = "3"

[profile.release-lto]
inherits = "release"
lto = "fat"
strip = "debuginfo"
codegen-units = 1

[workspace.package]
version = "3.0.0-beta.7"
authors = ["Luke Street <luke@street.dev>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/encounter/objdiff"
rust-version = "1.85"
