[package]
name = "objdiff-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = """
A local diffing tool for decompilation projects.
"""
publish = false
build = "build.rs"

[[bin]]
name = "objdiff"
path = "src/main.rs"

[features]
default = ["glow", "wgpu", "wsl"]
glow = ["eframe/glow"]
wgpu = ["eframe/wgpu", "dep:wgpu"]
wsl = []

[dependencies]
anyhow = "1.0"
bytes = "1.7"
cfg-if = "1.0"
const_format = "0.2"
cwdemangle = "1.0"
cwextab = "0.2"
dirs = "5.0"
egui = "0.28"
egui_extras = "0.28"
filetime = "0.2"
float-ord = "0.3"
font-kit = "0.14"
globset = { version = "0.4", features = ["serde1"] }
log = "0.4"
notify = { git = "https://github.com/notify-rs/notify", rev = "128bf6230c03d39dbb7f301ff7b20e594e34c3a2" }
objdiff-core = { path = "../objdiff-core", features = ["all"] }
png = "0.17"
pollster = "0.3"
regex = "1.10"
rfd = { version = "0.14" } #, default-features = false, features = ['xdg-portal']
rlwinmdec = "1.0"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-escape = "0.1"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.12"
time = { version = "0.3", features = ["formatting", "local-offset"] }

# Keep version in sync with egui
[dependencies.eframe]
version = "0.28"
features = [
    "default_fonts",
    "persistence",
    "wayland",
    "x11",
]
default-features = false

# Keep version in sync with eframe
[dependencies.wgpu]
version = "0.20"
features = [
    "dx12",
    "metal",
    "webgpu",
]
optional = true
default-features = false

# For Linux static binaries, use rustls
[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
self_update = { version = "0.41", default-features = false, features = ["rustls"] }

# For all other platforms, use native TLS
[target.'cfg(not(target_os = "linux"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "default-tls"] }
self_update = "0.41"

[target.'cfg(windows)'.dependencies]
path-slash = "0.2"
winapi = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(unix)'.dependencies]
exec = "0.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[build-dependencies]
anyhow = "1.0"
vergen-gitcl = { version = "1.0", features = ["build", "cargo"] }
