[package]
name = "objdiff-wasm"
version.workspace = true
edition = "2024"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = """
A local diffing tool for decompilation projects.
"""
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
std = ["objdiff-core/std"]

[dependencies]
log = { version = "0.4", default-features = false }
regex = { version = "1.12", default-features = false, features = ["unicode-case"] }
wit-bindgen = { version = "0.48", default-features = false, features = ["macros"] }
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }

[dependencies.objdiff-core]
path = "../objdiff-core"
default-features = false
features = ["arm", "arm64", "mips", "ppc", "superh", "x86", "dwarf"]

[target.'cfg(target_family = "wasm")'.dependencies]
talc = { version = "4.4", default-features = false, features = ["lock_api"] }

[build-dependencies]
wit-deps = "0.5"
